test/classes/nilability/error-with-bang-suggestion.good
error-with-bang-suggestion.chpl:34: In function 'writeScalarAttribute':
error-with-bang-suggestion.chpl:35: error: unresolved call 'shared H5File?.fid'
error-with-bang-suggestion.chpl:19: note: this candidate did not match: H5File.fid
error-with-bang-suggestion.chpl:35: note: because method call receiver with type 'shared H5File?'
error-with-bang-suggestion.chpl:19: note: is passed to formal 'this: borrowed H5File'
error-with-bang-suggestion.chpl:35: note: try to apply the postfix ! operator to method call receiver
error-with-bang-suggestion.chpl:36: error: unresolved call 'shared H5File?.mymethod(5)'
error-with-bang-suggestion.chpl:20: note: this candidate did not match: H5File.mymethod(arg: int)
error-with-bang-suggestion.chpl:36: note: because method call receiver with type 'shared H5File?'
error-with-bang-suggestion.chpl:18: note: is passed to formal 'this: borrowed H5File'
error-with-bang-suggestion.chpl:36: note: try to apply the postfix ! operator to method call receiver
error-with-bang-suggestion.chpl:38: error: unresolved call 'myfun(shared H5File?)'
error-with-bang-suggestion.chpl:30: note: this candidate did not match: myfun(arg: H5File)
error-with-bang-suggestion.chpl:38: note: because actual argument #1 with type 'shared H5File?'
error-with-bang-suggestion.chpl:30: note: is passed to formal 'arg: H5File'
error-with-bang-suggestion.chpl:38: note: try to apply the postfix ! operator to actual argument #1
  error-with-bang-suggestion.chpl:11: called as writeScalarAttribute(loc: shared H5File?)
